Fixed tag drop indicator being overlapped on Linux. Restyled linux tag drop indicator.
(integrated from komodo (trunk) change 76285 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@11456 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/tabs.less
+++ b/src/chrome/komodo/skin/plat/shared/tabs.less
@@ -77,6 +77,7 @@
                 width: 10px;
                 margin-bottom: -24px;
                 position: relative;
+                z-index: 1;
                 background: url('chrome://komodo/skin/tabs/tabDragIndicator.png') 50% 40% no-repeat;
             }
         }
